--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
+    "react": "^18.2.0",
     "validator": "^13.7.0"
   }
 }
